header: add new tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -128,6 +128,7 @@ build_tool(csv-exec-add		src/exec-add.c)
 build_tool(csv-grep		src/grep.c)
 build_tool(csv-groups		src/groups.c src/usr-grp.c)
 build_tool(csv-head		src/head.c)
+build_tool(csv-header		src/header.c)
 build_tool(csv-ls		src/ls.c src/usr-grp-query.c)
 build_tool(csv-min		src/min.c)
 build_tool(csv-max		src/max.c)
