merge: add new tool

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,6 +132,7 @@ build_tool(csv-header		src/header.c)
 build_tool(csv-ls		src/ls.c src/usr-grp-query.c)
 build_tool(csv-min		src/min.c)
 build_tool(csv-max		src/max.c)
+build_tool(csv-merge		src/merge.c)
 build_tool(csv-replace		src/replace.c)
 build_tool(csv-rpn-add		src/rpn-add.c)
 build_tool(csv-rpn-filter	src/rpn-filter.c)
