group-members: port to merge_utils framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,7 +127,7 @@ build_tool(csv-exec		src/exec.c)
 build_tool(csv-exec-add		src/exec-add.c)
 build_tool(csv-grep		src/grep.c)
 build_tool(csv-groups		src/groups.c src/usr-grp.c src/merge_utils.c)
-build_tool(csv-group-members	src/group-members.c src/usr-grp.c)
+build_tool(csv-group-members	src/group-members.c src/usr-grp.c src/merge_utils.c)
 build_tool(csv-head		src/head.c)
 build_tool(csv-header		src/header.c)
 build_tool(csv-ls		src/ls.c src/usr-grp-query.c)
