ls: port to merge_utils framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,7 +130,7 @@ build_tool(csv-groups		src/groups.c src/usr-grp.c src/merge_utils.c)
 build_tool(csv-group-members	src/group-members.c src/usr-grp.c src/merge_utils.c)
 build_tool(csv-head		src/head.c)
 build_tool(csv-header		src/header.c)
-build_tool(csv-ls		src/ls.c src/usr-grp-query.c)
+build_tool(csv-ls		src/ls.c src/usr-grp-query.c src/merge_utils.c)
 build_tool(csv-min		src/min.c)
 build_tool(csv-max		src/max.c)
 build_tool(csv-merge		src/merge.c)
