--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,10 @@ jobs:
     - name: mkdir
       run: mkdir build
     - name: cmake
-      run: cd build && cmake ..
+      run: cd build && cmake .. -DCMAKE_INSTALL_PREFIX=/tmp/csv-nix-tools-bin
     - name: make
       run: cd build && make
+    - name: make
+      run: cd build && make install
     - name: ctest
       run: cd build && ctest --output-on-failure --timeout 60
