--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
     - name: update package lists
       run: sudo apt update
     - name: install deps
-      run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev tmux
+      run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev pandoc tmux
     - name: mkdir
       run: mkdir build
     - name: cmake
