--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,15 +11,15 @@ jobs:
     - uses: actions/checkout@v1
     - name: update package lists
       run: sudo apt update
-    - name: install deps
+    - name: install dependencies
       run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev pandoc tmux
-    - name: mkdir
+    - name: create build directory
       run: mkdir build
-    - name: cmake
+    - name: configure
       run: cd build && cmake .. -DCMAKE_INSTALL_PREFIX=/tmp/csv-nix-tools-bin
-    - name: make
+    - name: build
       run: cd build && make
-    - name: make
+    - name: install
       run: cd build && make install
-    - name: ctest
+    - name: test
       run: cd build && ctest --output-on-failure --timeout 60
