--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -11,17 +11,17 @@ jobs:
     - uses: actions/checkout@v1
     - name: update package lists
       run: sudo apt update
-    - name: install deps
+    - name: install dependencies
       run: sudo apt install flex bison libsqlite3-dev libprocps-dev libncurses5-dev libmnl-dev tmux
-    - name: mkdir
+    - name: create build directory
       run: mkdir build
-    - name: cmake
+    - name: configure
       run: cd build && cmake .. -DCMAKE_BUILD_TYPE=Debug -DCOVERAGE=ON
-    - name: make
+    - name: build
       run: cd build && make
-    - name: ctest
+    - name: test
       run: cd build && ctest --output-on-failure --timeout 60
-    - name: upload
+    - name: upload coverage results
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
