--- a/.github/workflows/buildlite.yml
+++ b/.github/workflows/buildlite.yml
@@ -14,8 +14,10 @@ jobs:
     - name: create build directory
       run: mkdir build
     - name: configure
-      run: cd build && cmake ..
+      run: cd build && cmake .. -DCMAKE_INSTALL_PREFIX=/tmp/csv-nix-tools-bin
     - name: build
       run: cd build && make
+    - name: install
+      run: cd build && make install
     - name: test
       run: cd build && ctest --output-on-failure --timeout 60
