--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -81,6 +81,7 @@ inc(cut)
 inc(exec)
 inc(exec-add)
 inc(grep)
+inc(grep-rpn)
 inc(groups)
 inc(group-members)
 inc(head)
@@ -93,7 +94,6 @@ inc(netstat)
 inc(ps)
 inc(replace)
 inc(rpn-add)
-inc(rpn-filter)
 inc(show)
 inc(sort)
 inc(split)
