--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,6 +131,7 @@ build_tool(csv-cut		src/cut.c)
 build_tool(csv-exec		src/exec.c)
 build_tool(csv-exec-add		src/exec-add.c)
 build_tool(csv-grep		src/grep.c)
+build_tool(csv-grep-rpn		src/grep-rpn.c)
 build_tool(csv-groups		src/groups.c src/usr-grp.c src/merge_utils.c)
 build_tool(csv-group-members	src/group-members.c src/usr-grp.c src/merge_utils.c)
 build_tool(csv-head		src/head.c)
@@ -141,7 +142,6 @@ build_tool(csv-max		src/max.c)
 build_tool(csv-merge		src/merge.c)
 build_tool(csv-replace		src/replace.c)
 build_tool(csv-rpn-add		src/rpn-add.c)
-build_tool(csv-rpn-filter	src/rpn-filter.c)
 build_tool(csv-sort		src/sort.c)
 build_tool(csv-split		src/split.c)
 build_tool(csv-substring	src/substring.c)
@@ -152,7 +152,7 @@ build_tool(csv-uniq		src/uniq.c)
 build_tool(csv-users		src/users.c src/usr-grp.c src/merge_utils.c)
 
 target_link_libraries(csv-rpn-add	csvrpn)
-target_link_libraries(csv-rpn-filter	csvrpn)
+target_link_libraries(csv-grep-rpn	csvrpn)
 
 if(NCURSES_FOUND)
 	if(${CMAKE_VERSION} VERSION_LESS "3.13.0")
