--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,7 +141,7 @@ build_tool(csv-min		src/min.c)
 build_tool(csv-max		src/max.c)
 build_tool(csv-merge		src/merge.c)
 build_tool(csv-replace		src/replace.c)
-build_tool(csv-rpn-add		src/rpn-add.c)
+build_tool(csv-add-rpn		src/add-rpn.c)
 build_tool(csv-sort		src/sort.c)
 build_tool(csv-split		src/split.c)
 build_tool(csv-substring	src/substring.c)
@@ -151,7 +151,7 @@ build_tool(csv-tail		src/tail.c)
 build_tool(csv-uniq		src/uniq.c)
 build_tool(csv-users		src/users.c src/usr-grp.c src/merge_utils.c)
 
-target_link_libraries(csv-rpn-add	csvrpn)
+target_link_libraries(csv-add-rpn	csvrpn)
 target_link_libraries(csv-grep-rpn	csvrpn)
 
 if(NCURSES_FOUND)
