--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -73,6 +73,7 @@ set(DATA_DIR "${CMAKE_CURRENT_SOURCE_DIR}/data")
 
 inc(parsing)
 
+inc(add-rpn)
 inc(avg)
 inc(cat)
 inc(concat)
@@ -93,7 +94,6 @@ inc(min)
 inc(netstat)
 inc(ps)
 inc(replace)
-inc(rpn-add)
 inc(show)
 inc(sort)
 inc(split)
